objects/IAM_Unit_Subscriptions_History__c.object
<CustomObject>
    <description>It is specifically created for Guidanz Mobile and Field Test Guidanz Mobile Units subscriptions. It is used to store the history of unit subscriptions when Units APIs are called from Guidanz Mobile.</description>
    <fields>
        <fullName>IAM_API_Name__c</fullName>
        <description>These are the IAM Units API names</description>
        <label>API Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UploadUnits</fullName>
                </value>
                <value>
                    <fullName>DownloadUnits</fullName>
                </value>
                <value>
                    <fullName>GetAvailableUnits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Device_Info__c</fullName>
        <description>It is the device name from where the User access the API</description>
        <label>Device Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Free_Units__c</fullName>
        <label>Free Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM_Paid_Units__c</fullName>
        <label>Paid Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM_Server_Remaining_Units__c</fullName>
        <description>It store paid + free remaining units after uploading or downloading units</description>
        <label>Server Remaining Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM_Type__c</fullName>
        <description>These are the types of unit subscription</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CalAssist</fullName>
                </value>
                <value>
                    <fullName>Intapp</fullName>
                </value>
                <value>
                    <fullName>Intapp OEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Unit Subscriptions History</label>
    <nameField>
        <displayFormat>U-{000000}</displayFormat>
        <label>Unit Subscriptions History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Subscriptions History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>